--- a/Basic-Portfolio/assets/css/style.css
+++ b/Basic-Portfolio/assets/css/style.css
@@ -169,3 +169,9 @@ top: 762px;}
 top: 1090px;
 }
 
+@media screen and (max-width: 960px) {}
+
+@media screen  and (max-width: 768px) {}
+
+@media screen and (max-width: 680px) {}
+    
